base.css
/* ... */
body {
	line-height: 1;
}
ol, ul {
	list-style: none; 
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
:focus {
	outline: 0;
}
ins {
	text-decoration: none;
}
del {
	text-decoration: line-through;
}
/*========================================================
        [2] Clearfix        __clearfix
  ========================================================*/
.clearfix{zoom: 1;}
.clearfix:after {
    content: ".";
    display: block;
    /*clear: both;*/
    visibility: hidden;
    line-height: 0;
    height: 0;
}
.clearfix {display: inline-block;}
html[xmlns] .clearfix {display: block;}
*html .clearfix {height: 1%;}
/*========================================================
        [3] Base Elements       __base
  ========================================================*/
body {
	background-color: #fff; /** OW_Control type:color, section:1. General Settings, key:bodyColor, label:1. Page background color **/
    min-width: 767px;
}
body, html {
	font-family: 'Roboto', sans-serif;
	color: #212121; /** OW_Control type:color, section:2. Colors, key:textColor, label:6. Text **/
	font-size: 15px;
	line-height: 18px;
	height: 100%;
	min-width: 1000px;
}
a {
	color: #00BCD4 ; /** OW_Control type:color, key:accentColor, section:2. Colors, label:5. Accent **/
	text-decoration: none;
}
a:hover {
	color: #2db395;
	text-decoration: underline;
}
a:hover img {
	text-decoration: none;
}
b {
	font-weight: 500;
	font-family: 'Roboto', sans-serif;
}
p {
	text-indent: 0;
	margin-bottom: 8px;
}
h1, h2, h3, h4, h5 {
    color: #2196F3; /** OW_Control type:color, key:primaryColor, section:2. Colors, label:2. Primary **/
	margin: 0;
	padding: 0;
	font-weight: 300;
    font-family: 'Roboto', sans-serif;
    line-height: 1.1;
}
h1 {
    font-size: 4.2rem;
    margin: 2.1rem 0 1.68rem 0;
}
h2 {
    font-size: 3.56rem;
    margin: 1.78rem 0 1.424rem 0;
}
h3 {
    font-size: 2.92rem;
    margin: 1.46rem 0 1.168rem 0;
}
h4 {
    font-size: 2.28rem;
    margin: 1.14rem 0 0.912rem 0;
}
h5 {
    font-size: 1.64rem;
    margin: 0.82rem 0 0.656rem 0; }

h6 {
    font-size: 1rem;
    margin: 0.5rem 0 0.4rem 0; }
img {
	border: 0;
	vertical-align: middle;
}
table {
	border: none;
}

th, td {
	padding: 2px 5px;
	vertical-align: top;
}
th {
	border-bottom-width: 1px;
	border-bottom-style: solid;
	padding: 10px;
	vertical-align: middle;
	font-weight: normal;
	font-size: 17px;
}
th {
    background-color: #fff;
    font-family: 'Roboto', sans-serif;
}
hr {
	background-color: #B6B6B6; /** OW_Control type:color, section:2. Colors, key:dividerColor, label:8. Divider **/
	border: none;
	height: 1px;
	margin: 5px 5px 15px 5px;
}
/*========================================================
        [4] Typography        __typography
  ========================================================*/




/*========================================================
        [5] Masterpage & Page Layout        __layout
  ========================================================*/
/* ---- Page Layout, Content styles ---- */
/*Opera Fix*/
	body:before {
	content:"";
	height:100%;
	float:left;
	width:0;
	margin-top:-32767px;
}
/*End of the Opera Fix*/
html body div .ow_page h1 {
    background: none;
}
.ow_bg_color{
	background-color: #fff; /** OW_Control type:color, section:1. General Settings, key:bodyColor, label:1. Page background color **/
}
.ow_border {
    border-style: solid;
    border-color: #eff2f5;
}
body > .ow_page_wrap {
	min-height: 100%;
	padding-top: 56px;
}
.ow_page_padding {
	padding-bottom: 99px;
} 
.ow_canvas {
	margin: 0 auto;
	width: 1000px;
	word-wrap: break-word;
}
.ow_page {
    margin: 0 0px 0px auto; 
    padding: 0 18px;
}
.ow_page_container {
	width: 1000px;
	margin: 0px auto 16px;	
}
.ow_page_container .ow_page {
    padding: 28px 16px 16px;
    min-height: 400px;
}
.ow_content {
	float: none;
	width: 100%;
}
/* Footer */
.ow_footer {
    padding:1px 0px;
    color: #FFFFFF; /** OW_Control type:color, key:textIconsColor, section:2. Colors, label:4. Text/Icons **/
	position: relative;
	margin-top: -99px;
	clear: both;
}
.ow_footer .ow_canvas {
	width: 100%;
    background: #1976D2; /** OW_Control type:color, key:darkPrimaryColor, section:2. Colors, label:1. Dark primary **/
    padding-bottom: 1.5em;
}
.ow_footer .ow_copyright{
	float: left;
	padding-left: 10px;
    font-size: 90%;
    max-width: 280px;
}
.ow_footer .ow_copyright img.eu-flag {
    display: block;
    margin-bottom: 8px;
}
/* Columns */
.ow_column {
	width: 49%;
    overflow: hidden;	
}
.ow_narrow {
    width: 39%;
    overflow: hidden;
}
.ow_wide {
    width: 59%;
    overflow: hidden;    
}
.ow_superwide {
    width: 75%;
    overflow: hidden;   
}
.ow_supernarrow {
    width: 23%;
    overflow: hidden;
}
/* Avatar list (Groups, Googgle popup)*/
.ow_item_set2 { 
	width: 49%; 
}
.ow_item_set3 { 
	width: 33%; 
}
.ow_item_set4 { 
	width: 25%; 
}
.ow_item_set5 { 
	width: 20%; 
}
/* ---- End of the Page Layout, Content styles ---- */
/* ---- Header styles ---- */
.ow_top {
    position: relative;
    height: auto;
	min-height: 105px;
	padding-top: 50px;
}
.ow_logo {
	background-image: url(images/logo.png); /** OW_Control type:image, key:logoImage, section:1. General Settings, label: 3. Logo image **/
	background-size: auto 41px;
	background-repeat: no-repeat;
	background-position: center center;
	display: inline-block;
	height: 56px;
	width: 56px;
}
a.ow_logo:hover {
	text-decoration: none;
}

.ow_header {
    position: relative;
}

.ow_header_version {
    position: absolute;
    right: 1em;
    bottom: 1em;
    color: #dddddd;
    text-shadow: 1px 1px 0 #000;
    text-align: right;
}
.ow_header_img {
    width: 100%;
}
/* ... */

